[package]
name = "givememoney"
version = "1.0.0"
edition = "2021"
description = "Give me money! A CLI program to help you allocate money."
readme = "README.md"
repository = "https://github.com/hms5232/givememoney"
license = "Apache-2.0"
keywords = ["givememoney"]
categories = ["command-line-utilities"]

[[bin]]
# Specify filename of binary artifact
name = "gmm"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4.7"
rusty-money = { git = "https://github.com/hms5232/rusty_money", branch = "fix-allocate-remainder"}
